Add support for global IP blocklist #320